--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -19,9 +19,9 @@ name: continuous
 on: [push]
 
 jobs:
-  ubuntu-22_04:
-    name: ubuntu-22_04
-    runs-on: ubuntu-22.04
+  windows-latest:
+    name: windows-latest
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
       - name: Cache .nuke/temp, ~/.nuget/packages
