--- a/src/OpenHdWebUi/Server/OpenHdWebUi.Server.csproj
+++ b/src/OpenHdWebUi/Server/OpenHdWebUi.Server.csproj
@@ -1,10 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <SelfContained>true</SelfContained>
   </PropertyGroup>
 
   <ItemGroup>
