--- a/src/OpenHdWebUi/Server/OpenHdWebUi.Server.csproj
+++ b/src/OpenHdWebUi/Server/OpenHdWebUi.Server.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <RuntimeIdentifiers>win10-x64;linux-x64;linux-arm;linux-arm64</RuntimeIdentifiers>
   </PropertyGroup>
 
   <ItemGroup>
