--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -33,5 +33,5 @@ jobs:
             .nuke/temp
             ~/.nuget/packages
           key: ${{ runner.os }}-${{ hashFiles('**/global.json', '**/*.csproj') }}
-      - name: Run './build.cmd Clean DebPack'
-        run: ./build.cmd Clean DebPack
+      - name: Run './build.cmd Clean CloudsmithPublish'
+        run: ./build.cmd Clean CloudsmithPublish
