--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -35,3 +35,5 @@ jobs:
           key: ${{ runner.os }}-${{ hashFiles('**/global.json', '**/*.csproj') }}
       - name: Run './build.cmd Clean CloudsmithPublish'
         run: ./build.cmd Clean CloudsmithPublish
+        env:
+          CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
