--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,7 @@
 ###############################################################################
 * text=auto
 *.sh text eol=lf   # linux line-endings
+postinst text eol=lf   # linux line-endings
 ###############################################################################
 # Set default behavior for command prompt diff.
 #
