--- a/OpenHDWebUI.service
+++ b/OpenHDWebUI.service
@@ -5,6 +5,7 @@ After=NetworkManager.service
 [Service]
 User=root
 Type=notify
+Environment="ASPNETCORE_URLS=http://+:80;http://*:80;http://0.0.0.0:80"
 ExecStart=/usr/local/share/openhd/web-ui/OpenHdWebUi.Server
 Restart=always
 RestartSec=3
