Fixing working directory

--- a/OpenHDWebUI.service
+++ b/OpenHDWebUI.service
@@ -6,6 +6,7 @@ After=NetworkManager.service
 User=root
 Type=notify
 Environment="ASPNETCORE_URLS=http://+:80;http://*:80;http://0.0.0.0:80"
+WorkingDirectory=/usr/local/share/openhd/web-ui/
 ExecStart=/usr/local/share/openhd/web-ui/OpenHdWebUi.Server
 Restart=always
 RestartSec=3
