--- a/src/OpenHdWebUi.Server/ClientApp/angular.json
+++ b/src/OpenHdWebUi.Server/ClientApp/angular.json
@@ -132,5 +132,8 @@
       }
     }
   },
-  "defaultProject": "OpenHdWebUi.Server"
+  "defaultProject": "OpenHdWebUi.Server",
+  "cli": {
+    "analytics": false
+  }
 }
