--- a/src/OpenHdWebUi.Server/OpenHdWebUi.Server.csproj
+++ b/src/OpenHdWebUi.Server/OpenHdWebUi.Server.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Systemd" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
