--- a/src/OpenHdWebUi.Server/appsettings.json
+++ b/src/OpenHdWebUi.Server/appsettings.json
@@ -7,5 +7,29 @@
     }
   },
   "AllowedHosts": "*",
-  "FilesFolder": "/home/openhd/Videos/"
+  "FilesFolder": "/home/openhd/Videos/",
+  "SystemCommands": [
+    {
+      "Id": "",
+      "DisplayName": "",
+      "Command": ""
+    },
+    {
+      "Id": "",
+      "DisplayName": "",
+      "Command": ""
+    },
+    {
+      "Id": "",
+      "DisplayName": "",
+      "Command": ""
+    }
+  ],
+  "SystemFiles": [
+    {
+      "Id": "",
+      "DisplayName": "",
+      "Path": ""
+    }
+  ]
 }
