--- a/src/OpenHdWebUi.Server/appsettings.json
+++ b/src/OpenHdWebUi.Server/appsettings.json
@@ -10,26 +10,31 @@
   "FilesFolder": "/home/openhd/Videos/",
   "SystemCommands": [
     {
-      "Id": "",
-      "DisplayName": "",
-      "Command": ""
+      "Id": "sys-res-opendh",
+      "DisplayName": "Restart OpenHD",
+      "Command": "systemctl restart openhd"
     },
     {
-      "Id": "",
-      "DisplayName": "",
-      "Command": ""
+      "Id": "sys-res-qopendh",
+      "DisplayName": "Restart qOpenHD",
+      "Command": "systemctl restart qopenhd"
     },
     {
-      "Id": "",
-      "DisplayName": "",
-      "Command": ""
+      "Id": "sys-reboot",
+      "DisplayName": "Reboot system",
+      "Command": "systemctl reboot"
+    },
+    {
+      "Id": "sys-off",
+      "DisplayName": "Poweroff system",
+      "Command": "systemctl poweroff"
     }
   ],
   "SystemFiles": [
     {
-      "Id": "",
-      "DisplayName": "",
-      "Path": ""
+      "Id": "conf",
+      "DisplayName": "Configuration",
+      "Path": "/boot/configuration.txt"
     }
   ]
 }
