File system files download

--- a/src/OpenHdWebUi.Server/appsettings.json
+++ b/src/OpenHdWebUi.Server/appsettings.json
@@ -33,8 +33,13 @@
   "SystemFiles": [
     {
       "Id": "conf",
-      "DisplayName": "Configuration",
-      "Path": "/boot/configuration.txt"
+      "DisplayName": "config.txt",
+      "Path": "/boot/config.txt"
+    },
+    {
+      "Id": "version",
+      "DisplayName": "openhd_version.txt",
+      "Path": "/boot/openhd_version.txt"
     }
   ]
 }
