Previews in webUI #2

--- a/src/OpenHdWebUi.Server/appsettings.Development.json
+++ b/src/OpenHdWebUi.Server/appsettings.Development.json
@@ -7,5 +7,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "FilesFolder": "testData"
+  "FilesFolder": "C:\\testData\\media"
 }
