--- a/src/OpenHdWebUi.Server/appsettings.json
+++ b/src/OpenHdWebUi.Server/appsettings.json
@@ -17,7 +17,8 @@
     {
       "Id": "sys-res-qopendh",
       "DisplayName": "Restart qOpenHD",
-      "Command": "systemctl restart qopenhd"
+      "Command": "systemctl restart qopenhd",
+      "IsGroundOnly": "true"
     },
     {
       "Id": "sys-reboot",
