--- a/src/OpenHdWebUi.Server/ClientApp/package.json
+++ b/src/OpenHdWebUi.Server/ClientApp/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^14.1.3",
     "@angular/platform-server": "^14.1.3",
     "@angular/router": "^14.1.3",
+    "@microsoft/signalr": "^7.0.2",
     "bootstrap": "^5.2.0",
     "jquery": "^3.6.0",
     "oidc-client": "^1.11.5",
@@ -46,6 +47,5 @@
   },
   "overrides": {
     "autoprefixer": "10.4.5"
-  },
-  "optionalDependencies": {}
+  }
 }
