--- a/src/OpenHdWebUi.Server/ClientApp/package.json
+++ b/src/OpenHdWebUi.Server/ClientApp/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-server": "^14.1.3",
     "@angular/router": "^14.1.3",
     "@microsoft/signalr": "^7.0.2",
+    "@types/webrtc": "^0.0.33",
     "bootstrap": "^5.2.0",
     "jquery": "^3.6.0",
     "oidc-client": "^1.11.5",
