--- a/.gitignore
+++ b/.gitignore
@@ -366,3 +366,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /src/OpenHdWebUi.Server/ClientApp/.angular/cache/
+/.nuke/temp
