--- a/src/OpenHdWebUi.Server/ClientApp/package.json
+++ b/src/OpenHdWebUi.Server/ClientApp/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^15.1.5",
     "@angular/platform-server": "^15.1.5",
     "@angular/router": "^15.1.5",
+    "@eyevinn/webrtc-player": "^0.10.0",
     "@microsoft/signalr": "^7.0.2",
     "bootstrap": "^5.2.0",
     "jquery": "^3.6.0",
