--- a/src/OpenHdWebUi.Server/OpenHdWebUi.Server.csproj
+++ b/src/OpenHdWebUi.Server/OpenHdWebUi.Server.csproj
@@ -12,13 +12,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Bld.RtpReceiver" Version="0.0.0-alpha.0.27" />
+    <PackageReference Include="Bld.RtpToWebRtcRestreamer" Version="0.1.0" />
     <PackageReference Include="Flurl" Version="3.0.7" />
     <PackageReference Include="JetBrains.Annotations" Version="2022.3.1" />
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="7.0.3" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Systemd" Version="7.0.0" />
     <PackageReference Include="ProcessX" Version="1.5.5" />
-    <PackageReference Include="SIPSorcery" Version="6.0.11" />
   </ItemGroup>
 
   <ItemGroup>
