--- a/src/OpenHdWebUi.Server/appsettings.json
+++ b/src/OpenHdWebUi.Server/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "FilesFolder": "/home/openhd/Videos/",
+  "FilesFolder2": "/Videos/",
   "SystemCommands": [
     {
       "Id": "sys-res-opendh",
