--- a/src/openhdwebui.client/package.json
+++ b/src/openhdwebui.client/package.json
@@ -21,11 +21,12 @@
     "@angular/platform-browser": "^18.2.12",
     "@angular/platform-browser-dynamic": "^18.2.12",
     "@angular/router": "^18.2.12",
+    "bootstrap": "^5.3.3",
+    "jest-editor-support": "*",
+    "run-script-os": "*",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.2",
-    "jest-editor-support": "*",
-    "run-script-os": "*"
+    "zone.js": "~0.14.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.2.12",
