--- a/src/OpenHdWebUi.Server/appsettings.Development.json
+++ b/src/OpenHdWebUi.Server/appsettings.Development.json
@@ -7,5 +7,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "FilesFolder": "C:\\testData\\media"
+  "FilesFolders": [
+    "/home/openhd/Videos/",
+    "/Videos",
+    "C:\\testData\\media"
+  ]
 }
