--- a/src/OpenHdWebUi.Server/appsettings.json
+++ b/src/OpenHdWebUi.Server/appsettings.json
@@ -7,7 +7,10 @@
     }
   },
   "AllowedHosts": "*",
-  "FilesFolder": "/home/openhd/Videos/",
+  "FilesFolders": [
+    "/home/openhd/Videos/",
+    "/Videos"
+  ],
   "SystemCommands": [
     {
       "Id": "sys-res-opendh",
