--- a/src/OpenHdWebUi.Server/OpenHdWebUi.Server.csproj
+++ b/src/OpenHdWebUi.Server/OpenHdWebUi.Server.csproj
@@ -20,13 +20,13 @@
 
   <ItemGroup>
     <PackageReference Include="Flurl" Version="4.0.0" />
-    <PackageReference Include="JetBrains.Annotations" Version="2024.3.0" />
-    <PackageReference Include="Microsoft.Extensions.Hosting.Systemd" Version="9.0.0" />
-    <PackageReference Include="ProcessX" Version="1.5.5" />
+    <PackageReference Include="JetBrains.Annotations" Version="2025.1.0-eap1" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Systemd" Version="9.0.2" />
+    <PackageReference Include="ProcessX" Version="1.5.6" />
 
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy">
-      <Version>9.*-*</Version>
+      <Version>9.0.2</Version>
     </PackageReference>
   </ItemGroup>
 
