--- a/src/openhdwebui.client/.vscode/launch.json
+++ b/src/openhdwebui.client/.vscode/launch.json
@@ -2,7 +2,7 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "type": "edge",
+      "type": "msedge",
       "request": "launch",
       "name": "localhost (Edge)",
       "url": "https://localhost:9640",
