--- a/src/OpenHdWebUi.Server/appsettings.Development.json
+++ b/src/OpenHdWebUi.Server/appsettings.Development.json
@@ -11,5 +11,8 @@
     "/home/openhd/Videos/",
     "/Videos",
     "C:\\testData\\media"
-  ]
+  ],
+  "UpdateConfig": {
+    "UpdateFile": "C:\\testData\\update.zip"
+  }
 }
