--- a/src/OpenHdWebUi.Server/appsettings.json
+++ b/src/OpenHdWebUi.Server/appsettings.json
@@ -45,5 +45,8 @@
       "DisplayName": "openhd_version.txt",
       "Path": "/boot/openhd_version.txt"
     }
-  ]
+  ],
+  "UpdateConfig": {
+    "UpdateFile": "/usr/local/share/openhd/update.zip"
+  }
 }
