feat: add OpenHD settings editor

--- a/src/OpenHdWebUi.Server/appsettings.Development.json
+++ b/src/OpenHdWebUi.Server/appsettings.Development.json
@@ -12,6 +12,10 @@
     "/Videos",
     "C:\\testData\\media"
   ],
+  "SettingsDirectories": [
+    "C:\\testData\\settings",
+    "/usr/local/share/openhd/settings"
+  ],
   "UpdateConfig": {
     "UpdateFile": "C:\\testData\\update.zip"
   }
