--- a/src/OpenHdWebUi.Server/appsettings.json
+++ b/src/OpenHdWebUi.Server/appsettings.json
@@ -46,6 +46,10 @@
       "Path": "/boot/openhd_version.txt"
     }
   ],
+  "SettingsDirectories": [
+    "/usr/local/share/openhd/settings",
+    "/boot/openhd/settings"
+  ],
   "UpdateConfig": {
     "UpdateFile": "/usr/local/share/openhd/update.zip"
   }
