Improve settings JSON discovery and validation

--- a/src/OpenHdWebUi.Server/appsettings.Development.json
+++ b/src/OpenHdWebUi.Server/appsettings.Development.json
@@ -13,7 +13,9 @@
     "C:\\testData\\media"
   ],
   "SettingsDirectories": [
+    "C:\\testData\\openhd",
     "C:\\testData\\settings",
+    "/usr/local/share/openhd",
     "/usr/local/share/openhd/settings"
   ],
   "UpdateConfig": {
