--- a/src/OpenHdWebUi.Server/appsettings.json
+++ b/src/OpenHdWebUi.Server/appsettings.json
@@ -47,7 +47,9 @@
     }
   ],
   "SettingsDirectories": [
+    "/usr/local/share/openhd",
     "/usr/local/share/openhd/settings",
+    "/boot/openhd",
     "/boot/openhd/settings"
   ],
   "UpdateConfig": {
