Add support for serving local Docusaurus docs

--- a/src/OpenHdWebUi.Server/appsettings.Development.json
+++ b/src/OpenHdWebUi.Server/appsettings.Development.json
@@ -7,6 +7,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Documentation": {
+    "LocalDocsRoot": "C:/testData/docs",
+    "RequestPath": "/docs",
+    "LocalIntroPage": "introduction/index.html"
+  },
   "FilesFolders": [
     "/home/openhd/Videos/",
     "/Videos",
