--- a/src/OpenHdWebUi.Server/appsettings.json
+++ b/src/OpenHdWebUi.Server/appsettings.json
@@ -7,6 +7,11 @@
     }
   },
   "AllowedHosts": "*",
+  "Documentation": {
+    "LocalDocsRoot": null,
+    "RequestPath": "/docs",
+    "LocalIntroPage": "introduction/index.html"
+  },
   "FilesFolders": [
     "/home/openhd/Videos/",
     "/Videos"
