Bundle documentation with Debian package

--- a/src/OpenHdWebUi.Server/appsettings.json
+++ b/src/OpenHdWebUi.Server/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "Documentation": {
-    "LocalDocsRoot": null,
+    "LocalDocsRoot": "/usr/local/share/openhd/docs",
     "RequestPath": "/docs",
     "LocalIntroPage": "introduction/index.html"
   },
