--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -26,6 +26,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - name: 'Clone documentation repository'
+        run: git clone --depth 1 https://github.com/OpenHD/OpenHD-Website.git OpenHD-Website
       - name: 'Cache: .nuke/temp, ~/.nuget/packages'
         uses: actions/cache@v4
         with:
@@ -40,6 +42,7 @@ jobs:
           ./build.cmd Clean CloudsmithPublish 2>&1 | tee build.log
         env:
           CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
+          DOCS_REPOSITORY_PATH: ${{ github.workspace }}/OpenHD-Website
       - name: 'Upload build log'
         if: ${{ failure() }}
         uses: actions/upload-artifact@v4
